students/KukharchukIlya/task_02/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app13
  labels:
    org.bstu.course: RSIOT
    org.bstu.variant: "13"
