students/KukharchukIlya/task_02/k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: app13
  labels:
    app: db
    org.bstu.student.fullname: "Кухарчук Илья Николаевич"
    org.bstu.student.id: "220017"
    org.bstu.group: "АС-63"
    org.bstu.variant: "13"
    org.bstu.course: RSIOT
    org.bstu.owner: "IlyaKukharchuk"
    org.bstu.student.slug: "as-63-220017-v13"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
            - name: postgres-init
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
        - name: postgres-init
          configMap:
            name: postgres-init
