students/KukharchukIlya/task_02/k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web13
  namespace: app13
  labels:
    app: web13
    org.bstu.student.fullname: "Кухарчук Илья Николаевич"
    org.bstu.student.id: "220017"
    org.bstu.group: "АС-63"
    org.bstu.variant: "13"
    org.bstu.course: RSIOT
    org.bstu.owner: "IlyaKukharchuk"
    org.bstu.student.slug: "as-63-220017-v13"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web13
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: web13
    spec:
      containers:
        - name: web
          image: web13:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8061
          readinessProbe:
            httpGet:
              path: /ready
              port: 8061
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8061
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: "150m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
