students/KukharchukIlya/task_02/k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: app13
  labels:
    org.bstu.student.fullname: "Кухарчук Илья Николаевич"
    org.bstu.student.id: "220017"
    org.bstu.group: "АС-63"
    org.bstu.variant: "13"
    org.bstu.course: RSIOT
    org.bstu.owner: "IlyaKukharchuk"
    org.bstu.student.slug: "as-63-220017-v13"
spec:
  selector:
    app: db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
