students/KukharchukIlya/task_02/k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web13
  namespace: app13
  labels:
    org.bstu.student.fullname: "Кухарчук Илья Николаевич"
    org.bstu.student.id: "220017"
    org.bstu.group: "АС-63"
    org.bstu.variant: "13"
    org.bstu.course: RSIOT
    org.bstu.owner: "IlyaKukharchuk"
    org.bstu.student.slug: "as-63-220017-v13"
spec:
  selector:
    app: web13
  ports:
    - name: http
      protocol: TCP
      port: 80 # порт для доступа через Ingress
      targetPort: 8061 # порт контейнера web13
  type: ClusterIP
